# PBL_RobotControl

./: README.md
Matlab_PMSM_Drive/: README.md
Matlab_PMSM_Drive/Test_Code/: Test_Code.asv  Test_Code.m  Test_Code_0.m  Test_Code_1.m  Test_Code_Final.asv  Test_Code_Final.m  Test_Code_Original.m  Test_Code_Original_1.m  callback_Reference.m  callback_VelocityMode.m
Matlab_PMSM_Drive/Version_0/: PMSM_Drive_Script_0.m  README.md
Matlab_PMSM_Drive/Version_1/: PMSM_Drive_Script_1.m  README.md
Matlab_PMSM_Drive/Version_2/: PMSM_Drive_Script_2.m  README.md
Matlab_PMSM_Drive/Version_3/: PMSM_Drive_Script_3.m  README.md
Matlab_PMSM_Drive/Version_4/: PMSM_Drive_Script_4.m  README.md
Matlab_PMSM_Drive/Version_5/: PMSM_Drive_Script_5.m  README.md
Matlab_PMSM_Drive/Version_6/: PMSM_Drive_Script_6.m  README.md
Matlab_PMSM_Drive/Version_alpha/: READ.md  README.md  Version_alpha.m
Matlab_PMSM_Drive/Version_beta/: Version_beta.m  mpcgain.m
matlab2ros/: README.md
matlab2ros/custom_interfaces/: CMakeLists.txt  package.xml
matlab2ros/custom_interfaces/msg/: RefVoltage.msg  References.msg
matlab2ros/custom_interfaces/srv/: Checker.srv
matlab2ros/env_settings/: docker_run.sh
matlab2ros/matlab_node/: BOUND_PI.m  PMSM_Drive_Script_0.m  Test_Code_Final.m  callback_CurrentMode.m  callback_ModeSelection.m  callback_input.m  callback_mode.m  matlab_node.m
matlab2ros/pmsm_node/: CMakeLists.txt  package.xml
matlab2ros/pmsm_node/include/: pmsm_node.hpp
matlab2ros/pmsm_node/src/: pmsm_node.cpp
matlab2ros/pmsm_studio/: CMakeLists.txt
matlab2ros/pmsm_studio/include/: main_window.hpp  qnode.hpp
matlab2ros/pmsm_studio/src/: main.cpp  main_window.cpp  plot_window.cpp  qnode.cpp
matlab2ros/pmsm_studio/ui/: main_window.ui
matlab2ros/tutorials/: callback_func.m  callback_func2.m  tutorial.m
result/env_settings/: Dockerfile  build.sh  docker_run.sh
result/matlab_node/: callback_DOBoption.m  callback_PositionMode.m
result/pmsm_studio/: package.xml
result/pmsm_studio/include/: qnode.hpp
result/pmsm_studio/resources/: images.qrc
result/pmsm_studio/src/: qnode.cpp
result/pmsm_studio/ui/: main_window.ui  plot.ui
